Fixed compilation bugs due to last merge. Brought back the function extractAggregateFunctions(). Cleaned all unused imports. Followed IntelliJ's suggestions and fixed a lot of things it was pointing out. Only replaced things that were actually equivalent and would not cause bugs in the feature.